testsuite/tests/saks/should_fail/T16722.stderr

T16722.hs:8:11: error: [GHC-12875]
    • Unexpected kind variable ‘k’
    • In the standalone kind signature for D
    Suggested fix:
      Perhaps you intended to use the ‘PolyKinds’ extension
